...
                  title: Text('Язык'),
                  value: Text('Русский'),
                  leading: Icon(Icons.language),
                  onPressed: (BuildContext context) {},
                ),
                SettingsTile.switchTile(
                  title: Text('Темная тема'),
                  initialValue: _isDarkModeEnabled,
                  leading: Icon(Icons.color_lens),
                  onToggle: (bool value) {
                    setState(() {
                      _isDarkModeEnabled = value;
                      if (_isDarkModeEnabled) {
...
